# loadout

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  loadout.example.toml  skills.toml
.github/ISSUE_TEMPLATE/: bug.md  epic.md  task.md
docs/: ROADMAP.md
schema/: skill-frontmatter.json
scripts/: install.sh  new.sh  validate.sh
skills/_template/: SKILL.md
skills/declarative-constraint-prompting/: SKILL.md
src/: lib.rs  main.rs
src/commands/: check.rs  clean.rs  graph.rs  install.rs  list.rs  mod.rs  new.rs  validate.rs
src/config/: mod.rs  types.rs
src/graph/: mod.rs
src/linker/: mod.rs
src/paths/: mod.rs
src/skill/: crossref.rs  frontmatter.rs  mod.rs
src/tui/: health.rs  installer.rs  mod.rs  pipeline.rs  skill_browser.rs
tests/fixtures/: README.md  loadout.toml
tests/fixtures/skills/another-skill/: SKILL.md
tests/fixtures/skills/category/nested-skill/: SKILL.md
tests/fixtures/skills/test-skill/: SKILL.md
